[package]
name = "warframe-client"
version = "2.0.8"
authors = ["silen.locatelli@gmx.ch"]
description = "Rust API client for Warframe game data from warframestat.us - worldstate, items, mods, weapons, and more"
license = "MIT"
edition = "2021"
repository = "https://github.com/silen/warframe_client"
homepage = "https://github.com/silen/warframe_client"
documentation = "https://docs.rs/warframe-client"
keywords = ["warframe", "api", "client", "gaming", "rest"]
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart"] }

[features]
default = ["rustls-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
